--- a/index.css
+++ b/index.css
@@ -728,7 +728,7 @@ position: relative;
 .graphic {
     width: 60%;
     background-color: #e1ecf0;
-    background-image: url(../img/graphic.png);
+    background-image: url(./img/graphic.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
