--- a/index.css
+++ b/index.css
@@ -726,12 +726,22 @@ position: relative;
 
 
 .graphic {
-    width: 60%;
-    background-color: #e1ecf0;
-    background-image: url(./img/graphic.png);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: cover;
+    width: 100%;
+    position: relative;
+}
+
+.box-float {
+    position: absolute;
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    left: 31%;
+}
+
+.line_graphic {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .section-6 {
@@ -749,6 +759,7 @@ position: relative;
     justify-content: center;
     font-size: 25px;
     padding: 10px;
+    right: 20px;
 }
 
 .section-7 {
